# reasoning

./: .gitignore  CMakeLists.txt  toolchain.cmake
database/: 命题逻辑.lisp_grammar
src/: datatype.cxx  lisp_grammar.cxx  simple_engine.cxx
tests/: test_datatype.cxx  test_int_lisp_grammar.cxx  test_lisp_grammar.cxx  test_read_database.cxx
